fix menu arrow spacing

--- a/assets/sass/vha/components/header/_index.scss
+++ b/assets/sass/vha/components/header/_index.scss
@@ -183,7 +183,7 @@ nav .arrow {
 
     nav .arrow.down.two {
         top: 19px;
-        left: 224px;
+        left: 238px;
     }
 
     nav .right {
